tests/compile_fail/as_ref/unknown_struct_attr_arg.stderr
error: unknown argument, only `forward` is allowed
 --> tests/compile_fail/as_ref/unknown_struct_attr_arg.rs:2:10
  |
2 | #[as_ref(baz)]
  |          ^^^
